<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.HomeFragment">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="12dp"
        android:layout_marginBottom="30dp"
        android:background="@drawable/square_shape"
        android:contentDescription="@string/square_border_background"
        app:layout_constraintBottom_toTopOf="@+id/button_bitcoin_validator"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/text_view_your"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/your"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:textColor="@color/black"
        android:textSize="@dimen/text_size_default_home_fragment"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/imageView"
        app:layout_constraintTop_toTopOf="@+id/imageView" />

    <TextView
        android:id="@+id/text_view_coin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/coin"
        android:layout_marginTop="8dp"
        android:textColor="@color/black"
        android:textSize="@dimen/text_size_default_home_fragment"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/text_view_your"
        app:layout_constraintTop_toBottomOf="@+id/text_view_your" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/validator"
        android:layout_marginTop="8dp"
        android:textColor="@color/black"
        android:textSize="@dimen/text_size_default_home_fragment"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/text_view_coin"
        app:layout_constraintTop_toBottomOf="@+id/text_view_coin" />

    <ImageView
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:src="@drawable/ic_crypto"
        android:contentDescription="@string/image_cryptocurrency"
        android:layout_marginEnd="12dp"
        android:layout_marginBottom="12dp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView"
        app:layout_constraintEnd_toEndOf="@+id/imageView" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_bitcoin_validator"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:text="@string/btc"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/button_ethereum_validator"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_ethereum_validator"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/eth"
        app:layout_constraintBottom_toBottomOf="@+id/button_bitcoin_validator"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/button_bitcoin_validator" />

</androidx.constraintlayout.widget.ConstraintLayout>